<resources>
    <string name="app_name">Smart City</string>
    <string name="forget_password">forget password?</string>
    <string name="Canberra">Canberra</string>
    <string name="back">back</string>
    <string name="Home">Home</string>
    <string name="Message">Message</string>
    <string name="Notice">Notice</string>
    <string name="Search">Find</string>
    <string name="My">My</string>
    <string name="no_account">Do not have an account?</string>
    <string name="have_account">already have an account?</string>
    <string name="chosen_place">Now your chosen place is:</string>
    <string name="Report">Report</string>
    <string name="Book">Book</string>
    <string name="account_settings">account settings</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="log_off">Log Off</string>
    <string name="delete_account">Delete the Account</string>
    <string name="Email">Email</string>
    <string name="select_a_date">select a date</string>
    <string name="select_a_start_time">select a start time</string>
    <string name="select_an_end_time">select an end time</string>
    <string name="your_select_date_is">your select date is：</string>
    <string name="report_question1">Are there any of the following aging issues in your sports facility?</string>
    <string name="report_question2">How much do these aging issues impact the use of the sports facility?</string>
    <string name="report_question3">How long have these aging issues existed?</string>
    <string name="report2_1">No impact</string>
    <string name="report2_2">Slight impact</string>
    <string name="report2_3">Significant impact</string>
    <string name="report2_4">Unable to use</string>
    <string name="report3_1">Less than 6 months</string>
    <string name="report3_2">6 months to 1 year</string>
    <string name="report3_3">1 to 3 years</string>
    <string name="report3_4">More than 3 years</string>
    <string name="Apply">Apply</string>
    <string name="report1_9">Others</string>
    <string name="Next">Next</string>
    <string name="report1_8">Inadequate safety measures</string>
    <string name="report1_7">Damaged seating or stands</string>
    <string name="report1_6">Poor drainage system</string>
    <string name="report1_5">Insufficient lighting</string>
    <string name="report1_4">Faded signs and markers</string>
    <string name="report1_3">Old and malfunctioning equipment</string>
    <string name="report1_2">Rusty equipment</string>
    <string name="report1_1">Ground surface damage</string>
    <string name="Notification">Notification</string>
    <string name="Personal_Details">Personal Details</string>
    <string name="Manage_my_bookings">Manage my bookings</string>
    <string name="Notification_settings">Notification settings</string>
    <string name="Account_settings">Account settings</string>
    <string name="Friend_request">Friend request</string>
    <string name="Pick_a_date">Pick a date</string>
    <string name="Confirm">Confirm</string>
    <string name="Welcome_to">Welcome to</string>
    <string name="LogIn">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Password_Reset">Password Reset</string>
    <string name="New_Password">New Password</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>
    <string name="your_select_user_is">Your select user is:</string>
    <string name="Mark_as_done">Mark as done</string>
    <string name="Booking_cancel">Cancel this booking</string>
    <string name="Add_new_friend">Add new friend</string>
    <string name="Start_new_chat">Start new chat</string>
    <string name="Set_age">Set up your Age</string>
    <string name="set_gender">Set up your Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="name_change_hint">double click to start typing your new name</string>
    <string name="find_newfriend_hint">Enter username or email to search users</string>
    <string name="age_filter">Click here to filt range of age</string>
    <string name="select_friend">Choose a friend to start a new chat</string>
    <string name="gender_filter">Click here to select target gender</string>
    <string name="NS_friend_request">Remind me when there is a new friend request</string>
    <string name="NS_low_time_limit">Remind me when time limit is low</string>
    <string name="NS_report_feedback">Remind me when my report has a new feedback</string>
    <string name="NS_report_success">Remind me when my report success</string>
    <string name="NS_booking_near">Remind me when my booking time is close</string>
    <string name="NS_booking_success">Remind me when my booking success</string>
    <string name="NS_friend_message">Remind me when friend send new messages</string>
    <string name="Delete_user">Delete this user</string>
    <string name="Bolck_user">Block this user</string>
    <string name="age_range1">0-12</string>
    <string name="age_range2">13-18</string>
    <string name="age_range3">19-26</string>
    <string name="age_range4">27-35</string>
    <string name="age_range5">36-48</string>
    <string name="age_range6">49-69</string>
    <string name="age_range7">70-120</string>
    <string name="age_range8">null</string>
    <string name="Show">Show result</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="Unblock_user">Unblock this user</string>
    <string name="send_email">Send Password Reset Email</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="Account_visiable">My account is privacy</string>
    <string name="info_visiable">My information is privacy</string>
    <string name="Graphical_report">Graphical Report</string>
    <string name="super_block">Block this user and this user can not find you by searching forever</string>
    <string name="display_gender">display gender</string>
    <string name="display_ahead" />
    <string name="friend_avatar">friend avatar</string>
    <string name="show_avatar">show avatar</string>


</resources>