<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_settings_gender_selection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioButton
        android:id="@+id/account_settings_gender_selection_male"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Male" />

    <RadioButton
        android:id="@+id/account_settings_gender_selection_female"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Female" />

    <RadioButton
        android:id="@+id/account_settings_gender_selection_cancel_option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/age_range8" />

</RadioGroup>
