<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportpage1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline63"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/report_question1"
        app:layout_constraintBottom_toTopOf="@+id/guideline58"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline57"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_2"
        app:layout_constraintBottom_toTopOf="@+id/guideline63"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline62"
        app:layout_constraintTop_toTopOf="@+id/guideline58"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_3"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline63" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_4"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintStart_toStartOf="@+id/guideline62"
        app:layout_constraintTop_toTopOf="@+id/guideline63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4515625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <Button
        android:id="@+id/reportpage1_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1AD2C5E7"
        android:text="@string/Next"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline70"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline69" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_5"
        app:layout_constraintBottom_toTopOf="@+id/guideline65"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline64" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_6"
        app:layout_constraintBottom_toTopOf="@+id/guideline65"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintStart_toStartOf="@+id/guideline62"
        app:layout_constraintTop_toTopOf="@+id/guideline64" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_7"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline65" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_8"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintStart_toStartOf="@+id/guideline62"
        app:layout_constraintTop_toTopOf="@+id/guideline65" />

    <CheckBox
        android:id="@+id/reportpage1_checkbox9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/report1_9"
        app:layout_constraintBottom_toTopOf="@+id/guideline67"
        app:layout_constraintEnd_toStartOf="@+id/guideline61"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline66" />

    <EditText
        android:id="@+id/reportpage1_reason"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline68"
        app:layout_constraintEnd_toStartOf="@+id/guideline60"
        app:layout_constraintStart_toStartOf="@+id/guideline59"
        app:layout_constraintTop_toTopOf="@+id/guideline67"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:background="#C39BFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/Report"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>