<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/show_avatar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline167"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintStart_toStartOf="@+id/guideline168"
        app:layout_constraintTop_toTopOf="@+id/guideline166" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <LinearLayout
        android:id="@+id/account_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#C39BFF"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/account_settings"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <Button
        android:id="@+id/account_settings_change_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1AD2C5E7"
        android:text="@string/change_username"
        android:textAlignment="center"
        android:textColor="#9E9E9E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline84"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline87" />

    <Button
        android:id="@+id/account_settings_change_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1AD2C5E7"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="#9E9E9E"
        android:textColorLink="#F8F5F5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline85"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline81"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/account_settings_log_off"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00D2C5E7"
        android:text="@string/log_off"
        android:textAlignment="center"
        android:textColor="#40BEF8"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline83"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline82" />

    <Button
        android:id="@+id/account_settings_delete_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00D2C5E7"
        android:text="@string/delete_account"
        android:textAlignment="center"
        android:textColor="#F7ED0B0B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline86"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline88"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline112"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline113"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline115"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline116"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline117"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <Button
        android:id="@+id/account_settings_age"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1AD2C5E7"
        android:text="@string/Set_age"
        android:textAlignment="center"
        android:textColor="#9E9E9E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline113"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline112" />

    <Button
        android:id="@+id/account_settings_gender"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1AD2C5E7"
        android:text="@string/set_gender"
        android:textAlignment="center"
        android:textColor="#9E9E9E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline117"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline116" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline166"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07387141" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline167"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline168"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72749394" />

    <Button
        android:id="@+id/set_up_avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00D2C5E7"
        android:text="@string/change_avatar"
        android:textAlignment="viewStart"
        android:textColor="#0D0C0C"
        android:textColorLink="#121212"
        app:layout_constraintBottom_toTopOf="@+id/guideline167"
        app:layout_constraintEnd_toEndOf="@+id/user_avatar"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline166" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline175"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline176"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <Button
        android:id="@+id/account_settings_change_privacy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1AD2C5E7"
        android:text="@string/privacy_settings"
        android:textColor="#9E9E9E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline176"
        app:layout_constraintEnd_toStartOf="@+id/guideline115"
        app:layout_constraintStart_toStartOf="@+id/guideline114"
        app:layout_constraintTop_toTopOf="@+id/guideline175" />
</androidx.constraintlayout.widget.ConstraintLayout>